- Add span links to AWS SQS messaging spans on 'ReceiveMessage', one for each
  message (up to 1000) which has a 'traceparent' message attribute.
  ({issues}2593[#2593])

- Add "nodejs16.x" as one of the compatible runtimes for the Node.js APM agent
  Lambda layers now that
  https://aws.amazon.com/blogs/compute/node-js-16-x-runtime-now-available-in-aws-lambda/[this runtime is available on AWS].

[float]
===== Bug fixes

- Fixes a bug where the the agent would not serialize the database context of
  a span. ({issues}2715[#2715])

- Fix a possible crash in span compression handling on a span that was manually
  created without a parent span (e.g. if created with a custom `childOf`
  option). ({pull}2701[#2701])

[float]
===== Chores

- Add a package-lock.json file to ensure repeatable builds of the AWS Lambda
  layer and to assist with security issue auditing. ({issues}2626[#2626])

- Deprecate instrumentation for the legacy "hapi" package. While the APM agent
  still supports it, that instrumentation is no longer tested and support
  will be dropped in the next major version of the agent. Note that the
  "@hapi/hapi" package is still fully supported. ({pull}2698[#2698])

- Deprecate instrumentation for the obsolete "jade" package. "jade" was renamed
  to "pug" in 2015.  While the APM agent still supports "jade", that
  instrumentation is no longer tested. ({pull}2711[#2711])


[[release-notes-3.33.0]]
==== 3.33.0 2022/05/05

[float]
===== Features

- Pulled the `traceparent` NPM module into a local module and replaced the
  `random-poly-fill` module with the built in `require('crypto').randomFillSync`
  function call ({pull}2669[#2669])

- Add a `parent` option to `agent.captureError(err[, options][, cb])` to allow
  passing in a Transaction or Span to use as the parent for the error. Before
  this change the *current* span or transaction, if any, was always used.
+
This option is not documented in the user docs, nor added to the TypeScript