@@ -357,6 +357,7 @@ Instrumentation.prototype.addEndedSpan = function (span) {
   }
 
   if (!span.isRecorded()) {
+    span.transaction.captureDroppedSpan(span)
     return
   }
 
