@@ -5,6 +5,7 @@ var util = require('util')
 var ObjectIdentityMap = require('object-identity-map')
 
 const constants = require('../constants')
+const { DroppedSpanStats } = require('./dropped-span-stats')
 var getPathFromRequest = require('./express-utils').getPathFromRequest
 var GenericSpan = require('./generic-span')
 var parsers = require('../parsers')
@@ -87,6 +88,7 @@ function Transaction (agent, name, ...args) {
   this._service = undefined
   this._message = undefined
   this._cloud = undefined
+  this._droppedSpanStats = new DroppedSpanStats()
   this.outcome = constants.OUTCOME_UNKNOWN
 }
 
@@ -280,6 +282,9 @@ Transaction.prototype.toJSON = function () {
     payload.links = this._links
   }
 
+  if (this._droppedSpanStats.size() > 0) {
+    payload.dropped_spans_stats = this._droppedSpanStats.encode()
+  }
   return payload
 }
 
@@ -431,6 +436,10 @@ Transaction.prototype._captureBreakdown = function (span) {
       metrics.incrementCounter('span.self_time.sum.us', flattenedLabels, time)
     }
   }
+}
+
+Transaction.prototype.captureDroppedSpan = function (span) {
+  return this._droppedSpanStats.captureDroppedSpan(span)
 }
 
 function transactionBreakdownDetails ({ name, type } = {}) {
